# LUniversalInstaller

./: README.md  com.github.yucefsourani.LUniversalInstaller.desktop  luniversalinstaller.py  luniversalinstaller.spec  luniversalinstaller_old.py  meson.build  setup.py
plugins/: 4kdownload.py  ArduinoIDE.py  ArduinoIDEv2.py  Ciano.py  Fritzing.py  GitKraken.py  HandBrake.py  Marker.py  MyPaint.py  PulseEffects.py  Skype.py  Viber.py  VidCutter.py  albasheer.py  android_studio_fedora.py  anydesk.py  arfedoracontrolcenter_fedora.py  atom_fedora.py  audacity_freeworld_fedora.py  blender_fedora.py  blender_flatpak.py  brackets.py  brave.py  broadcom_fedora.py  chromium_fedora.py  codeblocks_fedora.py  codecs_fedora.py  codecs_fedora_f31.py  compression_fedora.py  darktable_fedora.py  darktable_flatpak.py  dnf_fastestmirror.py  dnf_keepcache.py  dukto_fedora.py  edge.py  example_plugin.py  example_plugin1.py  example_plugin2.py  example_plugin3.py  example_plugin4.py  (+39 more)
plugins/universalplugin/: uplugin.py
